<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#09C"
    android:padding="@dimen/widget_margin">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/egiptback1"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/appwidget_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/appwidget_text"
            android:gravity="center_horizontal"
            android:text="@string/widget_title"
            android:textColor="#000000"
            android:textSize="14dp"
            android:textStyle="bold|italic"
            android:layout_marginTop="-10dp"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appwidget_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:text="@string/widget_website"
            android:textStyle="italic" />


        <ImageView
            android:id="@+id/contentImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:clickable="true"
            android:src="@drawable/alexandria_street" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="0dp">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button2"
                android:layout_alignStart="@+id/button2"
                android:layout_below="@+id/button2"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/widget_sounds_prev"
                android:textSize="10dp"
                android:textStyle="italic"
                android:gravity="right"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button2"
                android:layout_alignStart="@+id/button2"
                android:layout_below="@+id/button2"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/widget_sounds_play"
                android:textSize="10dp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button2"
                android:layout_alignStart="@+id/button2"
                android:layout_below="@+id/button2"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/widget_sounds_next"
                android:textStyle="italic"
                android:textSize="10dp"
                android:gravity="left"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>